@@ -690,6 +690,7 @@ sym_band.o : ../../Modules/uspp.o
 sym_band.o : ../../Modules/wavefunctions.o
 sym_band.o : ../../PW/src/pwcom.o
 sym_band.o : ../../PW/src/symm_base.o
+wannier_ham.o : ../../Modules/clocks.o
 wannier_ham.o : ../../Modules/constants.o
 wannier_ham.o : ../../Modules/environment.o
 wannier_ham.o : ../../Modules/io_files.o
