@@ -92,6 +92,7 @@ SUBROUTINE new_hamiltonian(form, plot_bands)
   USE constants,  ONLY : rytoev , tpi
   USE buffers
   USE symm_base,  ONLY : nsym
+  USE mytime, ONLY : f_wall
   !
   IMPLICIT NONE
   LOGICAL :: plot_bands
@@ -102,12 +103,6 @@ SUBROUTINE new_hamiltonian(form, plot_bands)
   real(DP), ALLOCATABLE :: ek(:,:)
   real(DP) :: e(nwan), x, hoping(3), nelec
   CHARACTER(20) :: fmt
-  INTERFACE
-     FUNCTION cclock ( ) BIND(C,name="cclock") RESULT(t)
-       USE ISO_C_BINDING
-       REAL(kind=c_double) :: t
-     END FUNCTION cclock
-  END INTERFACE
 
   ALLOCATE(ek(nwan,nks))
   ALLOCATE(hamk(nwan,nwan,nks))
@@ -202,7 +197,7 @@ SUBROUTINE new_hamiltonian(form, plot_bands)
   ! write HMLT file
   IF (form == 'amulet') THEN
 
-    seconds = cclock()
+    seconds = f_wall()
 
     CALL write_hamiltonian_amulet(nwan,hamk,seconds,114)
 
