@@ -1,7 +1,5 @@
 c_mkdir.o : ../include/c_defs.h
-cptimer.o : ../include/c_defs.h
 eval_infix.o : ../include/c_defs.h
-indici.o : ../include/c_defs.h
 md5.o : 
 md5_from_file.o : ../include/c_defs.h
 md5_from_file.o : 
